k8s/base/cerberus-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerberus-ui
  namespace: cerberus
spec:
  type: ClusterIP
  selector:
    app: cerberus-ui
  ports:
    - port: 80
      targetPort: 80
